fireworks effect fixes

--- a/src/app/password-prompt/password-prompt.component.html
+++ b/src/app/password-prompt/password-prompt.component.html
@@ -12,7 +12,6 @@
     <app-fireworks *ngIf="showFireworks"></app-fireworks>
     
     <div class="fireworks" [ngClass]="{'show': fireworksVisible}">
-      <h1>Happy Birthday Yasmine!</h1>
+      <h1>Happy Birthday Yasmine! You deserve all the best ❤️</h1>
     </div>
   </div>
-  
