--- a/src/app/password-prompt/password-prompt.component.css
+++ b/src/app/password-prompt/password-prompt.component.css
@@ -13,7 +13,17 @@
     align-items: center;
     text-align: center;
   }
-  
+
+  h1 {
+    margin-bottom: 20px;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5%;
+  }
+
   input {
     padding: 10px;
     font-size: 16px;
